# pydaymet

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  conftest.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  bugreport.yml
.github/workflows/: codeql-analysis.yml  release.yml  test.yml
ci/requirements/: environment-dev.yml  environment.yml  py3.6.yml  py3.7.yml  py3.8.yml  py3.9.yml
docs/: conf.py  modules.rst  pydaymet.rst
pydaymet/: __init__.py  cli.py  core.py  exceptions.py  pet.py  print_versions.py  pydaymet.py
src/pydaymet/: __init__.py  _streaming.py  _utils.py  cli.py  core.py  exceptions.py  pet.py  print_versions.py  pydaymet.py
tests/: test_exceptions.py  test_pydaymet.py
